<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_title"
        android:gravity="center"
        android:layout_marginTop="40dp"
        android:textStyle="bold"
        android:fontFamily="monospace"
        android:textSize="34sp"

        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_the_weight_in_kg"
        android:gravity="center"
        android:textSize="24sp"
        android:layout_marginTop="50dp"
        android:textStyle="bold"
        android:textAlignment="center"
        />

    <EditText
        android:id="@+id/weightEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/hint"
        android:gravity="center"
        android:textSize="22sp"
        android:inputType="number"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/convertButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:backgroundTint="#5C00FF"
        android:text="@string/convert"
        android:textStyle="bold"
        android:textSize="24sp"
        />

    <TextView
        android:id="@+id/resultTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/result"
        android:gravity="center"
        android:textSize="24sp"
        android:layout_marginTop="50dp"
        android:textStyle="bold"
        android:textAlignment="center"
        />


</LinearLayout>